--- a/wwbboo.html
+++ b/wwbboo.html
@@ -54,6 +54,12 @@ html,body,h1,h2,h3,h4,h5 {font-family: "RobotoDraft", "Roboto", sans-serif}
      <a1 class="w3-bar-item w3-button" onclick="window.open('https://www. 1 .com/')" >
     <i class="w3-hover-opacity"><a > OFICIAL WEBSITE </a> </i> </a1>
 	
+	
+  <div  class="w3-bar-item w3-button w3-left-align" >
+	  <div id="google_translate_element" ></div> 
+		<div id="BlmyDIV">
+</div>
+	
  
  </nav>
 
@@ -237,8 +243,20 @@ you can finde more fressh info on oficial web site and on social median cominuty
 
  </div>
 
+
 </div>
 
+	
+<script type="text/javascript">
+function googleTranslateElementInit() {
+  new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+}
+</script>
+
+<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+	
+	
+	
 
 <script>
 var openInbox = document.getElementById("myBtn");
