--- a/wwbboo.html
+++ b/wwbboo.html
@@ -41,7 +41,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "RobotoDraft", "Roboto", sans-serif}
 
 <!-- Side Navigation -->
 <nav class="w3-sidebar w3-bar-block w3-collapse w3-white w3-animate-left w3-card" style="z-index:3;width:320px;" id="mySidebar">
-  <a href="javascript:void(0)" class="w3-bar-item w3-button w3-border-bottom w3-large"><img src="./g192.png" style="width:60%;"></a>
+  <a href="javascript:void(0)" class="w3-bar-item w3-button w3-border-bottom w3-large"><img src="./fto/c2gL192.png" style="width:60%;"></a>
 
   <a onclick=" w3_close()"  class="w3-bar-item w3-button w3-hide-large w3-large">Close  <i class="fa fa-remove"></i></a>
   
