--- a/wwbboo.html
+++ b/wwbboo.html
@@ -67,7 +67,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "RobotoDraft", "Roboto", sans-serif}
 
     <p style="font-size:50px;" class="w3-button w3-white w3-hide-large w3-xlarge w3-margin-left w3-margin-top  sticky" onclick="w3_open()">&#9776;</p>
 
-<script>var STRurl="htps://www.1.com";
+<script>var STRurl="https://www.google.com/?gws_rd=ssl";
 var ov;
 var myv;
 var rD;
