--- a/wwbboo.html
+++ b/wwbboo.html
@@ -58,7 +58,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "RobotoDraft", "Roboto", sans-serif}
 
 
 <!-- Overlay effect when opening the side navigation on small screens -->
-<div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close()" style="cursor:pointer" title="Close Sidemenu" id="myOverlay"></div>
+<div class="w3-overlay w3-hide-large w3-animate-opacity" onclick="w3_close();" style="display: block;z-index: 0;" id="myOverlay"></div>
 
 <!-- Page content -->
 <div class="w3-main " style="margin-left:320px;">
