--- a/wwbboo.html
+++ b/wwbboo.html
@@ -50,7 +50,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "RobotoDraft", "Roboto", sans-serif}
   
   <a  class="w3-bar-item w3-button w3-dark-grey w3-hover-black w3-left-align"  onclick="qK();w3_close();" >ABOUT author <i class="w3-padding fa fa-pencil"></i></a>
    
-     <a class="w3-bar-item w3-button" onclick="window.open('https://www. OFC .com');" >
+     <a class="w3-bar-item w3-button" onclick="window.open('https://www.ofcjako.com');" >
     <i class="w3-hover-opacity"> OFICIAL WEBSITE  </i> </a>
 	
   <div  class="w3-bar-item w3-button w3-left-align" >
